# research

./: AGENTS.md  README.md
chrome-cdp-login-skill/: .gitignore  QUICK-REFERENCE.md  README.md  SKILL.md  cdp-helper.js  login-helper.js  notes.md  package-lock.json  package.json  setup.sh  test-skill.js
codex-fastapi-streaming/: README.md  app.py  codex_wrapper.py  index.html  notes.md  start_server.sh  test_wrapper.py
codex-fastapi-streaming-token/: README.md  app.py  codex_token_wrapper.py  index.html  notes.md  start_server.sh  test_wrapper.py
custom-system-prompt/: README.md  example-poet-output-style.md  notes.md
dom-markdown-extractor-eval/: .gitignore  README.md  evaluate.py  evaluation-results.json  notes.md  package.json  test-node-html-markdown.js  test-pandoc.sh  test-python-tools.py  test-turndown.js
gh-auth-dev-containers/: COMPARISON.md  QUICK_REFERENCE.md  README.md  notes.md  test-auth.sh
json-tools-benchmark/: .gitignore  README.md  analysis_output.txt  analyze_results.py  benchmark.py  benchmark_output.txt  benchmark_output_v2.txt  generate_data.py  notes.md  package-lock.json  package.json  streaming_output.txt  streaming_output_v2.txt  test_streaming.py
pyodide-pandas-breakeven/: README.md  benchmark-comparison.html  benchmark-javascript.html  benchmark-pyodide.html  benchmark.js  notes.md
readability-extractors-evaluation/: README.md  (+12 more)
uv-cache-mount-benchmark/: Dockerfile.bind-mount  Dockerfile.buildkit-cache  Dockerfile.no-cache  Dockerfile.volume  README.md  benchmark_direct.py  benchmark_results.json  notes.md  pyproject.toml
(+278 files in other folders)
