[project]
name = "uv-cache-benchmark"
version = "0.1.0"
description = "Test project for benchmarking uv cache strategies"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "fastapi>=0.100.0",
    "scikit-learn>=1.3.0",
    "pillow>=10.0.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
